[gd_scene load_steps=12 format=3 uid="uid://b4wlkvkhvyfuw"]

[ext_resource type="PackedScene" uid="uid://btcpjdktuymx" path="res://scenes/tile_map.tscn" id="1_srfbd"]
[ext_resource type="Script" path="res://scenes/lake.gd" id="1_uo0y5"]
[ext_resource type="PackedScene" uid="uid://bhysbh3p85m13" path="res://scenes/christina.tscn" id="2_d4jyo"]
[ext_resource type="PackedScene" uid="uid://c4unx6bdwbf2e" path="res://scenes/actionable.tscn" id="5_8316s"]
[ext_resource type="Texture2D" uid="uid://bpw14t7dqoshe" path="res://character_sprite/ester_remake_full.png" id="5_mj48b"]
[ext_resource type="Resource" uid="uid://dx857vmqr01s6" path="res://dialogue/lake_dialogue.dialogue" id="6_yf04x"]
[ext_resource type="Resource" uid="uid://cm3l4onx5m7jh" path="res://dialogue/ester_dialogue.dialogue" id="8_na31b"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_prjtl"]
size = Vector2(75, 20)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_8p7e5"]
size = Vector2(396, 20)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_cjetm"]
size = Vector2(20, 74)

[sub_resource type="CircleShape2D" id="CircleShape2D_y3xcn"]

[node name="lake" type="Node2D"]
y_sort_enabled = true
script = ExtResource("1_uo0y5")

[node name="TileMap" parent="." instance=ExtResource("1_srfbd")]
layer_0/tile_data = PackedInt32Array(2490433, 65541, 2, 2490434, 65541, 1, 2490431, 65541, 1, 2490432, 5, 2, 2490430, 65541, 1, 2752571, 327685, 1, 2687035, 327685, 1, 2621499, 327685, 1, 2555963, 327685, 1, 2555964, 458757, 1, 2621500, 458757, 1, 2687036, 458757, 1, 2752572, 458757, 1, 2752570, 65541, 1, 2687034, 65541, 1, 2687037, 5, 1, 2555965, 5, 0, 2621501, 65541, 1, 2752573, 65541, 1, 2555962, 131077, 0, 2621498, 65541, 0, 2490427, 327685, 0, 2490428, 458757, 0, 2490426, 65541, 1, 2490429, 5, 1, 2424890, 65554, 2, 2424891, 65554, 2, 2424892, 65554, 2, 2424893, 65554, 2, 2424889, 65554, 5, 2359353, 131090, 2, 2359352, 65554, 2, 2359354, 18, 0, 2359355, 18, 0, 2359356, 18, 0, 2359357, 18, 0, 2424894, 18, 5, 2359358, 18, 2, 2359359, 65554, 2, 2293816, 18, 0, 2293823, 18, 0, 2293817, 18, 0, 2293818, 18, 0, 2293819, 18, 0, 2293820, 18, 0, 2293821, 18, 0, 2293822, 18, 0, 2490425, 65541, 2, 2490424, 65541, 1, 2490423, 5, 2, 2424887, 131077, 2, 2359351, 65554, 2, 2293815, 18, 0, 2424888, 65541, 2, 2424896, 5, 2, 2359360, 65554, 2, 2293824, 18, 0, 2424895, 131077, 1, 2490422, 65541, 0, 2424886, 65541, 0, 2359350, 65554, 5, 2293814, 131090, 3, 2293825, 18, 3, 2359361, 18, 5, 2424897, 131077, 1, 2228289, 18, 3, 2228288, 18, 0, 2228287, 18, 0, 2228280, 18, 0, 2228279, 18, 0, 2228278, 131090, 3, 2162742, 131090, 3, 2097206, 131090, 3, 2162753, 18, 3, 2097217, 18, 3, 2031670, 131090, 3, 1966134, 131090, 3, 1900598, 131090, 3, 1835062, 131090, 3, 2031681, 18, 3, 1966145, 18, 3, 1900609, 18, 3, 1835073, 18, 3, 2490421, 65541, 1, 2424885, 65541, 1, 2359349, 131077, 0, 2293813, 131077, 0, 2228277, 65541, 1, 2162741, 65541, 1, 2097205, 65541, 1, 2031669, 65541, 1, 1966133, 131077, 1, 1900597, 65541, 1, 1835061, 65541, 2, 1835074, 65541, 2, 1900610, 5, 1, 1966146, 131077, 1, 2031682, 65541, 1, 2097218, 65541, 1, 2162754, 65541, 1, 2228290, 65541, 1, 2293826, 65541, 1, 2359362, 131077, 0, 2424898, 65541, 2, 2293827, 327685, 0, 2359363, 327685, 2, 2293828, 393221, 0, 2293829, 393221, 0, 2293830, 393221, 0, 2293831, 393221, 0, 2359364, 393221, 2, 2359365, 393221, 2, 2359366, 393221, 2, 2359367, 393221, 2, 2424899, 5, 2, 2424900, 65541, 0, 2424901, 65541, 1, 2424902, 5, 0, 2424903, 5, 0, 2097207, 20, 3, 2031671, 20, 3, 1966135, 20, 3, 1900599, 20, 3, 1835063, 20, 3, 2162743, 20, 4, 2162744, 65556, 4, 2162745, 20, 6, 2228281, 20, 4, 2228282, 65556, 4, 2228283, 65556, 4, 2228284, 65556, 4, 2228285, 65556, 4, 2228286, 131092, 4, 2162750, 65556, 6, 2162751, 65556, 4, 2162752, 131092, 4, 2097216, 131092, 3, 2031680, 131092, 3, 1966144, 131092, 3, 1900608, 131092, 3, 1835072, 131092, 3)
layer_1/tile_data = PackedInt32Array(2162743, 22, 0, 2228279, 22, 1, 2293815, 22, 2, 2162744, 65558, 0, 2228280, 65558, 1, 2293816, 65558, 2, 2162745, 131094, 0, 2228281, 131094, 1, 2293817, 131094, 2, 2162755, 3, 0, 2228291, 65539, 1, 2162756, 3, 0, 2228292, 65539, 1, 2162757, 3, 0, 2228293, 65539, 1, 2162758, 3, 0, 2228294, 65539, 1, 2162759, 3, 0, 2228295, 65539, 1)
layer_2/y_sort_enabled = true
layer_2/tile_data = PackedInt32Array(2228279, 21, 1, 2293815, 21, 2, 2228280, 65557, 1, 2293816, 65557, 2, 2228281, 131093, 1, 2293817, 131093, 2)
layer_3/z_index = 2
layer_3/tile_data = PackedInt32Array(2621507, 393219, 1, 2555971, 393219, 1, 2490435, 393219, 1, 2490430, 393219, 0, 2555966, 393219, 1, 2621502, 393219, 1, 2490429, 327683, 0, 2555965, 327683, 1, 2621501, 327683, 1, 2687037, 327683, 1, 2752573, 327683, 1, 2687038, 393219, 1, 2752574, 393219, 1, 2490431, 393219, 0, 2555967, 393219, 1, 2621503, 393219, 1, 2687039, 393219, 1, 2752575, 393219, 1, 2490432, 393219, 0, 2555968, 393219, 1, 2621504, 393219, 1, 2687040, 393219, 1, 2752576, 393219, 1, 2490433, 393219, 0, 2555969, 393219, 1, 2621505, 393219, 1, 2687041, 393219, 1, 2752577, 393219, 1, 1835074, 327683, 1, 1900610, 327683, 1, 1966146, 327683, 1, 2031682, 327683, 1, 2097218, 327683, 1, 2424898, 327683, 0, 2490434, 327683, 3, 2555970, 393219, 1, 2621506, 393219, 1, 2687042, 393219, 1, 2752578, 393219, 1, 1835075, 393219, 1, 1900611, 393219, 1, 1966147, 393219, 1, 2031683, 393219, 1, 2097219, 393219, 1, 2424899, 393219, 0, 2687043, 393219, 1, 2752579, 393219, 1, 1835076, 393219, 1, 1900612, 393219, 1, 1966148, 393219, 1, 2031684, 393219, 1, 2097220, 393219, 1, 2424900, 393219, 0, 2490436, 393219, 1, 2555972, 393219, 1, 2621508, 393219, 1, 2687044, 393219, 1, 2752580, 393219, 1, 1835077, 393219, 1, 1900613, 393219, 1, 1966149, 393219, 1, 2031685, 393219, 1, 2097221, 393219, 1, 2424901, 393219, 0, 2490437, 393219, 1, 2555973, 393219, 1, 2621509, 393219, 1, 2687045, 393219, 1, 2752581, 393219, 1, 1835078, 393219, 1, 1900614, 393219, 1, 1966150, 393219, 1, 2031686, 393219, 1, 2097222, 393219, 1, 2424902, 393219, 0, 2490438, 393219, 1, 2555974, 393219, 1, 2621510, 393219, 1, 2687046, 393219, 1, 2752582, 393219, 1, 1835079, 393219, 1, 1900615, 393219, 1, 1966151, 393219, 1, 2031687, 393219, 1, 2097223, 393219, 1, 2424903, 393219, 0, 2490439, 393219, 1, 2555975, 393219, 1, 2621511, 393219, 1, 2687047, 393219, 1, 2752583, 393219, 1, 2490421, 393219, 3, 2555957, 393219, 1, 2621493, 393219, 1, 2687029, 393219, 1, 2752565, 393219, 1, 2490422, 393219, 0, 2555958, 393219, 1, 2621494, 393219, 1, 2687030, 393219, 1, 2752566, 393219, 1, 2490423, 393219, 0, 2555959, 393219, 1, 2621495, 393219, 1, 2687031, 393219, 1, 2752567, 393219, 1, 2490424, 393219, 0, 2555960, 393219, 1, 2621496, 393219, 1, 2687032, 393219, 1, 2752568, 393219, 1, 2490425, 393219, 0, 2555961, 393219, 1, 2621497, 393219, 1, 2687033, 393219, 1, 2752569, 393219, 1, 2490426, 458755, 0, 2555962, 458755, 1, 2621498, 458755, 1, 2687034, 458755, 1, 2752570, 458755, 1, 1835061, 458755, 1, 1900597, 458755, 1, 1966133, 458755, 1, 2031669, 458755, 1, 2097205, 458755, 1, 2162741, 458755, 1, 2228277, 458755, 1, 2293813, 458755, 1, 2359349, 458755, 1, 2424885, 458755, 1, 2162754, 327683, 2, 2162755, 393219, 2, 2162756, 393219, 2, 2162757, 393219, 2, 2162758, 393219, 2, 2162759, 393219, 2)
layer_4/tile_data = PackedInt32Array(2228282, 29, 1, 2228283, 65565, 1, 2228284, 131101, 1, 2162746, 29, 0, 2162747, 65565, 0, 2162748, 131101, 0, 2097210, 29, 0, 2097211, 65565, 0, 2097212, 131101, 0)
layer_5/tile_data = PackedInt32Array(2228281, 19, 0, 2228282, 19, 0, 2228283, 19, 0, 2228284, 19, 0, 2228285, 19, 0, 2228286, 19, 0, 2162750, 19, 0, 2162751, 19, 0, 2162752, 19, 0, 2162749, 19, 0, 2162748, 19, 0, 2162747, 19, 0, 2162746, 19, 0, 2162745, 19, 0, 2162744, 19, 0, 2162743, 19, 0, 2097207, 19, 0, 2097208, 19, 0, 2097209, 19, 0, 2097210, 19, 0, 2097211, 19, 0, 2097212, 19, 0, 2097213, 19, 0, 2097214, 19, 0, 2097215, 19, 0, 2097216, 19, 0, 2031680, 19, 0, 2031679, 19, 0, 2031678, 19, 0, 2031677, 19, 0, 2031676, 19, 0, 2031675, 19, 0, 2031674, 19, 0, 2031673, 19, 0, 2031672, 19, 0, 2031671, 19, 0, 1966135, 19, 0, 1966136, 19, 0, 1966137, 19, 0, 1966138, 19, 0, 1966139, 19, 0, 1966140, 19, 0, 1966141, 19, 0, 1966142, 19, 0, 1966143, 19, 0, 1966144, 19, 0, 1900608, 19, 0, 1900607, 19, 0, 1900606, 19, 0, 1900605, 19, 0, 1900604, 19, 0, 1900603, 19, 0, 1900602, 19, 0, 1900601, 19, 0, 1900600, 19, 0, 1900599, 19, 0, 1835063, 19, 0, 1835064, 19, 0, 1835065, 19, 0, 1835066, 19, 0, 1835067, 19, 0, 1835068, 19, 0, 1835069, 19, 0, 1835070, 19, 0, 1835071, 19, 0, 1835072, 19, 0)
layer_6/name = "shadow"
layer_6/z_index = 1
layer_6/tile_data = PackedInt32Array(2293827, 393241, 2, 2293828, 393241, 2, 2293829, 393241, 2, 2293830, 393241, 2, 2293831, 393241, 2, 2293826, 327705, 2, 2228290, 327705, 1, 2162754, 327705, 1, 2162755, 393241, 1, 2162756, 393241, 1, 2162757, 393241, 1, 2162758, 393241, 1, 2162759, 393241, 1, 2228295, 393241, 1, 2228294, 393241, 1, 2228293, 393241, 1, 2228292, 393241, 1, 2228291, 393241, 1)

[node name="CanvasLayer" type="CanvasLayer" parent="."]
layer = -5

[node name="ColorRect" type="ColorRect" parent="CanvasLayer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 1)
metadata/_edit_use_anchors_ = true

[node name="Christina" parent="." instance=ExtResource("2_d4jyo")]
position = Vector2(1263, 468)

[node name="Camera2D" type="Camera2D" parent="Christina"]
zoom = Vector2(6, 6)
limit_left = 665
limit_top = 220
limit_right = 1273
limit_bottom = 700
drag_horizontal_enabled = true
drag_vertical_enabled = true

[node name="StaticBody2D" type="StaticBody2D" parent="."]

[node name="Actionable" parent="StaticBody2D" instance=ExtResource("5_8316s")]
dialogue_resource = ExtResource("6_yf04x")

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="StaticBody2D/Actionable"]
polygon = PackedVector2Array(818, 220, 739, 220, 739, 403, 802, 403, 802, 438, 831, 438, 831, 348, 915, 348, 915, 438, 978, 438, 978, 405, 1040, 405, 1040, 220, 986, 220, 882, 220)

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="StaticBody2D"]
polygon = PackedVector2Array(818, 220, 739, 220, 739, 403, 802, 403, 802, 438, 831, 438, 831, 348, 915, 348, 915, 437, 978, 438, 978, 405, 1040, 405, 1040, 220, 986, 220, 882, 220)

[node name="lake_exit_point" type="Area2D" parent="."]
position = Vector2(863, 710)

[node name="CollisionShape2D" type="CollisionShape2D" parent="lake_exit_point"]
position = Vector2(27.5, 0)
shape = SubResource("RectangleShape2D_prjtl")

[node name="ester" type="CharacterBody2D" parent="."]
position = Vector2(777, 440)

[node name="Sprite2D" type="Sprite2D" parent="ester"]
texture = ExtResource("5_mj48b")
hframes = 4
vframes = 4

[node name="StaticBody2D2" type="StaticBody2D" parent="."]
position = Vector2(703, 210)

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBody2D2"]
position = Vector2(188, 0)
shape = SubResource("RectangleShape2D_8p7e5")

[node name="lake_exit_point_2" type="Area2D" parent="."]
position = Vector2(1283, 507)

[node name="CollisionShape2D" type="CollisionShape2D" parent="lake_exit_point_2"]
position = Vector2(0, -27)
shape = SubResource("RectangleShape2D_cjetm")

[node name="Actionable_2" parent="." instance=ExtResource("5_8316s")]
position = Vector2(777, 445)
dialogue_resource = ExtResource("8_na31b")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Actionable_2"]
shape = SubResource("CircleShape2D_y3xcn")

[connection signal="body_entered" from="lake_exit_point" to="." method="_on_lake_exit_point_body_entered"]
[connection signal="body_exited" from="lake_exit_point" to="." method="_on_lake_exit_point_body_exited"]
[connection signal="body_entered" from="lake_exit_point_2" to="." method="_on_lake_exit_point_2_body_entered"]
[connection signal="body_exited" from="lake_exit_point_2" to="." method="_on_lake_exit_point_2_body_exited"]
